# EnclaveGeneralize

./: .gitignore  CHANGELOG.md  EnclaveGeneralize.cabal  config-base.json  config.json  flake.nix  justfile
app/: Main.hs
mapreducelite/: Main.hs  Rustyversion.rs
src/: App.hs  Client1.hs  Client2.hs  Derulo.hs  Enclave1.hs  GenModule.hs  HasTEE.hs  Network.hs  Plugin.hs  Test.hs
