cabal-version:      2.4
name:               EnclaveGeneralize
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Rewbert
maintainer:         krookr@chalmers.se

library
    hs-source-dirs: src
    exposed-modules:
--        Client1
--        Client2
--        Enclave1
        App
        Network
        GenModule
  --      Test
        Derulo
        HasTEE
        Plugin
    build-depends:
        base,
        bytestring,
        mtl,
        containers,
        binary,
        network-simple,
        template-haskell,
        ghc
    default-language: Haskell2010
    --ghc-options: -ddump-splices

-- A copyright notice.
-- copyright:
-- category:

executable enclave
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base, EnclaveGeneralize, scotty, transformers, text
    hs-source-dirs:   app
    default-language: Haskell2010
    --ghc-options: -ddump-splices -O3

extra-source-files: 
    CHANGELOG.md,
    config.json